ordersystem/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: eunji
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
          # aws의 ecr 주소를 사용
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/eunji-ordersystem:latest
          ports:
          - containerPort: 8080
          resources:
          # 최대 할당 가능량
            limits:
              cpu: "0.2"
              memory: "500Mi"
          # 최대 할당 가능량
            requests:
              cpu: "0.2"
              memory: "250Mi"
