ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: eunji
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - "server.qkdrmawll.store"
    secretName: qkdrmawll-com-tls
  rules:
  - host: server.qkdrmawll.store
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ordersystem-service
            port:
              number: 80
